# doc-reader

./: .gitignore  README.md  local.env  main.py  prod.env  pyproject.toml
docker/: Dockerfile  build.sh  run-docker.sh
reader/: extract_text.py  pdfplumber_cli.py  schema.py  settings.py
reader/ocr/: page.py  utils.py
reader/structure/: schema.py
